reflect-demo/tests/success/reflect_both.rs
#[derive(reflect::Input, reflect::Output)]
struct MyStruct {
    field: u32,
}

fn main() {}
