reflect-demo/tests/errors/invalid_reflect_type_generic.rs
#[derive(reflect::Input, reflect::Output)]
struct MyStruct<T> {
    field: u8,
}

fn main() {}
